# rust-with-mingw-lib

./: Cargo.toml  Makefile  README.md  build.rs  test
.cargo/: config.toml
include/: LibHeader.h
src/: MyLibTest.c  defines.rs  lib.rs  main.c  returns.rs  test_dll.c  wrapper.rs
