[package]
name = "rust-with-mingw-lib"
version = "0.1.0"
edition = "2021"
links = "MyLibrary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4.2"
num-traits = "0.2.18"
thiserror = "1.0.57"

[lib]
crate-type = ["cdylib", "lib"]
